progress on processing ddfs and hazard data

--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -6,11 +6,11 @@
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T22:00:10.682614Z",
-     "iopub.status.busy": "2023-10-20T22:00:10.682172Z",
-     "iopub.status.idle": "2023-10-20T22:00:10.724588Z",
-     "shell.execute_reply": "2023-10-20T22:00:10.723506Z",
-     "shell.execute_reply.started": "2023-10-20T22:00:10.682567Z"
+     "iopub.execute_input": "2023-10-21T19:18:34.376501Z",
+     "iopub.status.busy": "2023-10-21T19:18:34.375754Z",
+     "iopub.status.idle": "2023-10-21T19:18:34.418667Z",
+     "shell.execute_reply": "2023-10-21T19:18:34.417529Z",
+     "shell.execute_reply.started": "2023-10-21T19:18:34.376451Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T22:00:10.727777Z",
-     "iopub.status.busy": "2023-10-20T22:00:10.727333Z",
-     "iopub.status.idle": "2023-10-20T22:00:12.722671Z",
-     "shell.execute_reply": "2023-10-20T22:00:12.721862Z",
-     "shell.execute_reply.started": "2023-10-20T22:00:10.727733Z"
+     "iopub.execute_input": "2023-10-21T19:18:34.422743Z",
+     "iopub.status.busy": "2023-10-21T19:18:34.421798Z",
+     "iopub.status.idle": "2023-10-21T19:18:36.792080Z",
+     "shell.execute_reply": "2023-10-21T19:18:36.791133Z",
+     "shell.execute_reply.started": "2023-10-21T19:18:34.422667Z"
     }
    },
    "outputs": [],
@@ -47,7 +47,8 @@
     "os.environ['USE_PYGEOS'] = '0'\n",
     "\n",
     "from util.files import *\n",
-    "from util.const import *"
+    "from util.const import *\n",
+    "from util.ddfs import *"
    ]
   },
   {
@@ -56,11 +57,11 @@
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-20T22:00:12.723577Z",
-     "iopub.status.busy": "2023-10-20T22:00:12.723341Z",
-     "iopub.status.idle": "2023-10-20T22:00:12.736891Z",
-     "shell.execute_reply": "2023-10-20T22:00:12.736133Z",
-     "shell.execute_reply.started": "2023-10-20T22:00:12.723560Z"
+     "iopub.execute_input": "2023-10-21T19:18:36.793561Z",
+     "iopub.status.busy": "2023-10-21T19:18:36.793170Z",
+     "iopub.status.idle": "2023-10-21T19:18:36.812216Z",
+     "shell.execute_reply": "2023-10-21T19:18:36.811375Z",
+     "shell.execute_reply.started": "2023-10-21T19:18:36.793534Z"
     }
    },
    "outputs": [],
@@ -349,20 +350,390 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "26a4fbb6-23b2-49b0-a485-6bc268bc92c0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T18:36:29.778168Z",
+     "iopub.status.busy": "2023-10-21T18:36:29.776983Z",
+     "iopub.status.idle": "2023-10-21T18:36:30.180945Z",
+     "shell.execute_reply": "2023-10-21T18:36:30.179816Z",
+     "shell.execute_reply.started": "2023-10-21T18:36:29.778116Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Generally, we will process these DDFs the same way since they\n",
+    "# are written in mostly the same format\n",
+    "# However, there are a few preprocessing steps necessary for the hazus\n",
+    "# ddfs. Also, there are some differences for NACCS vs. HAZUS\n",
+    "# shallow uncertainty representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f2558d82-b45e-4249-8bd8-c416d0d5ca37",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:26:16.050429Z",
+     "iopub.status.busy": "2023-10-21T20:26:16.049398Z",
+     "iopub.status.idle": "2023-10-21T20:26:16.501317Z",
+     "shell.execute_reply": "2023-10-21T20:26:16.500151Z",
+     "shell.execute_reply.started": "2023-10-21T20:26:16.050379Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read depth damage functions\n",
+    "ddf_filedir = join(VULN_DIR_UZ, \"physical\", NATION)\n",
+    "naccs = pd.read_csv(join(ddf_filedir, \"naccs_ddfs.csv\"))\n",
+    "hazus = pd.read_csv(join(ddf_filedir, \"haz_fl_dept.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ec16a6f-2dab-456a-af85-968779cd07cc",
+   "metadata": {},
+   "source": [
+    "### HAZUS DDFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "01a06109-cc56-4abf-8973-dfd3ebd531fd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:26:16.504458Z",
+     "iopub.status.busy": "2023-10-21T20:26:16.503584Z",
+     "iopub.status.idle": "2023-10-21T20:26:16.544604Z",
+     "shell.execute_reply": "2023-10-21T20:26:16.543643Z",
+     "shell.execute_reply.started": "2023-10-21T20:26:16.504411Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# First, preprocessing for hazus ddfs\n",
+    "# For basements, use FIA (MOD.) which does one and two floors by\n",
+    "# A and V zones\n",
+    "# For no basements, use USACE - IWR\n",
+    "# which does one and two floor, no flood zone specified\n",
+    "# 106: FIA (MOD.) 1S WB A zone\n",
+    "# 114: \"\" V zone\n",
+    "# 108: FIA (MOD.) 1S WB A zone\n",
+    "# 116: \"\" V zone\n",
+    "# 129: USACE - IWR 1S NB\n",
+    "# 130: USCAE - IWR 2S+ NB\n",
+    "# For elevating homes, we can use Pile foundation DDFs\n",
+    "# from USACE - Wilmington\n",
+    "# 178 - 1S Pile Foundation\n",
+    "# 183 - 2S Pile Foundation\n",
+    "# These are no basement homes, so to speak\n",
+    "# The USACE New Orleans DDFs have some pier foundation\n",
+    "# DDFs with fresh & salt water and long & short duration\n",
+    "# but this does not appear to apply to out study area\n",
+    "# Subset to DmgFnId in the codes above\n",
+    "dmg_ids = [106, 108, 114, 116, 129, 130, 178, 183]\n",
+    "hazus_res = hazus[(hazus['DmgFnId'].isin(dmg_ids)) & \n",
+    "                  (hazus['Occupancy'] == 'RES1')]\n",
+    "\n",
+    "# Make occtype column in the same form that the NSI has\n",
+    "# e.g. RES1-1SNB\n",
+    "# Add column for A or V zone\n",
+    "# Note: outside SFHA basement homes will take A zone\n",
+    "# What other option do we have? \n",
+    "\n",
+    "# Split Description by comma. \n",
+    "# The split[0] element tells us stories (but description sometimes\n",
+    "# says floors instead of story...)\n",
+    "# Can get around this issue by looking at first word\n",
+    "# The split[1] element\n",
+    "# tells us w/ basement or no basement. Use this to create occtype\n",
+    "desc = hazus_res['Description'].str.split(',')\n",
+    "s_type = desc.str[0].str.split(' ').str[0]\n",
+    "s_type = s_type.str.replace('one', '1').str.replace('two', '2')\n",
+    "b_type = desc.str[1].str.strip()\n",
+    "# Below, we are just trying to get archetypes like\n",
+    "# 1SNB, 2SWB, 1SPL -- for pile foundation\n",
+    "occtype = np.where(b_type == 'w/ basement',\n",
+    "                   s_type + 'SWB',\n",
+    "                   s_type + 'SNB')\n",
+    "occtype = np.where(b_type == 'Pile foundation',\n",
+    "                   s_type + 'SPL',\n",
+    "                   occtype)\n",
+    "# Some of these HAZUS DDFs require us to keep track of the\n",
+    "# flood zone they're in\n",
+    "# I don't think this matters for our case study since\n",
+    "# there are no high wave coastsal zones\n",
+    "# This line is designed to work specifically \n",
+    "# with the way the descriptions\n",
+    "# are written out for the DDFs used in this case study\n",
+    "fz = desc.str[-1].str.lower().str.replace('structure', '').str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5f934250-6c91-47fd-9497-13702fd8f776",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:26:16.881121Z",
+     "iopub.status.busy": "2023-10-21T20:26:16.880534Z",
+     "iopub.status.idle": "2023-10-21T20:26:16.941044Z",
+     "shell.execute_reply": "2023-10-21T20:26:16.939955Z",
+     "shell.execute_reply.started": "2023-10-21T20:26:16.881077Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Need occtype, flood zone, depth_ft, and rel_dam columns\n",
+    "# Follow steps from naccs processing to get depth_ft and rel_dam\n",
+    "# First, drop unecessary columns\n",
+    "# Don't need Source_Table, Occupy_Class, Cover_Class, empty columns\n",
+    "# Description, Source, DmgFnId, Occupancy and first col (Unnamed: 0)\n",
+    "# because index was written out\n",
+    "# Don't need all na columns either (just for automobiles, apparently)\n",
+    "hazus_res = hazus_res.loc[:,[col for col in hazus_res.columns if 'ft' in col]]\n",
+    "hazus_res = hazus_res.dropna(axis=1, how='all')\n",
+    "# Add the occtype and fld_zone columns\n",
+    "hazus_res = hazus_res.assign(occtype=occtype,\n",
+    "                             fld_zone=fz.str[0])\n",
+    "\n",
+    "# Then, occtype and fld_zone as index and melt rest of columns. \n",
+    "idvars = ['occtype', 'fld_zone']\n",
+    "\n",
+    "# Get a tidy ddf back\n",
+    "hazus_melt = tidy_ddfs(hazus_res, idvars)\n",
+    "\n",
+    "# Delete depth_str and pctdam and standardize\n",
+    "# column names\n",
+    "# Since we just have the building types, call this\n",
+    "# bld_type instead of occtype\n",
+    "dropcols = ['depth_str', 'pct_dam', 'occtype', 'fld_zone']\n",
+    "\n",
+    "# We create an \"id\" col for the ddfs\n",
+    "# Our key for HAZUS is bld_type & fld_zone\n",
+    "ddf_id = np.where(hazus_melt['fld_zone'].notnull(),\n",
+    "                  hazus_melt['occtype'] + '_' + hazus_melt['fld_zone'],\n",
+    "                  hazus_melt['occtype'])\n",
+    "\n",
+    "# Add this to our dataframe so that we can drop bld_type & fld_zone\n",
+    "# Easier to have the flood zone as a capital letter\n",
+    "# It's lower case because of earlier code to do\n",
+    "# some processing\n",
+    "hazus_melt = hazus_melt.assign(ddf_id=pd.Series(ddf_id).str.upper())\n",
+    "# Drop columns\n",
+    "hazus = hazus_melt.drop(columns=dropcols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "78001c46-8d0f-4836-86c1-3d1d74e22da3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:26:17.350359Z",
+     "iopub.status.busy": "2023-10-21T20:26:17.349713Z",
+     "iopub.status.idle": "2023-10-21T20:26:17.390459Z",
+     "shell.execute_reply": "2023-10-21T20:26:17.389272Z",
+     "shell.execute_reply.started": "2023-10-21T20:26:17.350309Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Now we're going to process this tidy dataframe into a dictionary\n",
+    "# for easier ensemble generation\n",
+    "\n",
+    "# After we get this new column, we are going to create two\n",
+    "# new columns based on the +/- .3*pt_estimate (30% uncertainty) \n",
+    "# assumption from Maggie's paper \n",
+    "# (https://www.nature.com/articles/s41467-020-19188-9)\n",
+    "# We will take the ddf_id, depth_ft, and these two columns\n",
+    "# to do the same thing as before for the dict of dicts\n",
+    "# We need to use max(0, ) and min(1, ) to make sure the +/- .3\n",
+    "# doesn't lead to negative losses, greater than 100% losses\n",
+    "# Since Maggie's paper, though, there have been studies\n",
+    "# suggesting that the damage distribution at each depth\n",
+    "# follows more of a long upper tailed Beta distribution. \n",
+    "# While we don't have parameters for this, we can at least \n",
+    "# represent a wider upper tail. So, -.3 and +.5 can better\n",
+    "# represent this\n",
+    "# A key assumption is that\n",
+    "# we can round depths to the nearest value in the\n",
+    "# dictionary to estimate their loss. There is no guidance in the\n",
+    "# use of DDFs about interpolating between values given on the DDF\n",
+    "# NFIP assessed damages data (recently released with the new v2 of\n",
+    "# the NFIP claims) only provides depth in feet, rounded to the\n",
+    "# nearest foot. So, any uncertainty surrounding the depth-damage\n",
+    "# relationship for any foot should include some component of \n",
+    "# measurement error in representing some non rounded depth value\n",
+    "# to the rounded value and estimating a relationship\n",
+    "# To implement this, we will round all depths to the nearest foot\n",
+    "# before we check for whether they are inside the bounds for\n",
+    "# estimating losses with a particular depth-damage function\n",
+    "# Because of this, rounding the parameters to the nearest\n",
+    "# hundredth is a much lower order concern\n",
+    "dam_low = np.maximum(0, hazus['rel_dam'] - .3*hazus['rel_dam']).round(2)\n",
+    "dam_high = np.minimum(1, hazus['rel_dam'] + .5*hazus['rel_dam']).round(2)\n",
+    "\n",
+    "# Add these columns into our dataframe\n",
+    "hazus = hazus.assign(low=dam_low,\n",
+    "                     high=dam_high)\n",
+    "\n",
+    "# Next, we are getting our params\n",
+    "# Since we're uniformly sampling from the range\n",
+    "# our params are endpoints\n",
+    "# We don't need the rel_dam column anymore \n",
+    "hazus_f = hazus.drop(columns='rel_dam')\n",
+    "\n",
+    "# We are going to write out hazus_f \n",
+    "# In generating the ensemble for losses\n",
+    "# we are going to merge this dataframe\n",
+    "# with our structure ensemble - merged with\n",
+    "# depths. So, on haz_depth & depth_ft from hazus_f\n",
+    "# plus the structure archetype, we can get\n",
+    "# the rel_dam parameters. We will draw from this\n",
+    "# and get the rel_dam realization for this\n",
+    "# state of the world\n",
+    "# But, he way this data is stored requires a few assumptions\n",
+    "# about loss estimation\n",
+    "# First, any depths below that lowest depth have 0 loss\n",
+    "# Second, any depths above the highest depth have the same\n",
+    "# loss as the highest depth \n",
+    "# To implement this, we will check depths (after drawing from their\n",
+    "# distribution at each location) for whether they are inside\n",
+    "# the range of the particular DDF which can be defined with \n",
+    "# conastants. If below, loss is 0. If above, swap with\n",
+    "# the upper bound\n",
+    "# We are going to do the processing for that in the script\n",
+    "# where we generate the loss ensemble using a helper function\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "930e508c-7c50-4a49-8665-56267f8de4e6",
+   "metadata": {},
+   "source": [
+    "### NACCS DDFs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33aca7c2-b81d-48b0-ba0a-a2ba3391c913",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# VULN_DIR_UZ/physical/US/haz_fl_dept.csv & naccs_ddfs.csv\n",
+    "# For NACCS, we have the RES 1 DDFs\n",
+    "# For elevation, we have RES-OPEN and RES-ENC\n",
+    "# These are very similar in terms of damages so\n",
+    "# only need to retain RES-OPEN for simplicity for\n",
+    "# our current case study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "f838a2d4-2491-449b-92dc-fc345ceea1d9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:51:34.838210Z",
+     "iopub.status.busy": "2023-10-21T20:51:34.837616Z",
+     "iopub.status.idle": "2023-10-21T20:51:34.884762Z",
+     "shell.execute_reply": "2023-10-21T20:51:34.882893Z",
+     "shell.execute_reply.started": "2023-10-21T20:51:34.838161Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# NACCS need some preprocessing as well\n",
+    "# First, subset to the relevant Occupancy types\n",
+    "# We want to end up with ddf ids 1swb, open, etc.\n",
+    "# don't need to keep the RES1- part for this case study\n",
+    "naccs['res_type'] = naccs['Occupancy'].str.split('-').str[0]\n",
+    "naccs['bld_type'] = naccs['Occupancy'].str.split('-').str[1]\n",
+    "occ_types = ['1SWB', '2SWB', '1SNB', '2SNB', 'OPEN']\n",
+    "naccs_res = naccs.loc[(naccs['bld_type'].isin(occ_types)) &\n",
+    "                      ((naccs['res_type'] == 'RES1') |\n",
+    "                       (naccs['res_type'] == 'RES'))]\n",
     "\n",
-    "# I want to adapt the code in nsi_unc/workflows/notebooks/loss_ensemble\n",
-    "# and write out the HAZUS & NACCS dicts (the params)\n",
-    "# I want to modify it for every half foot, not rounding to the\n",
-    "# full foot - that will probably bug people\n",
-    "# I also want to update the process_data.ipynt code\n",
-    "# For both of these, code can be greatly condensed -- with some\n",
-    "# if statement -- to be cleaner"
+    "# Next, drop columns we don't need\n",
+    "drop_cols = ['Description', 'Source', 'Occupancy', 'res_type']\n",
+    "naccs_res = naccs_res.drop(columns=drop_cols)\n",
+    "\n",
+    "# Rename DamageCategory\n",
+    "naccs_res = naccs_res.rename(columns={'DamageCategory': 'dam_cat'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "50cd8f69-6b40-47a5-a9e0-ce956e07f956",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:52:18.886970Z",
+     "iopub.status.busy": "2023-10-21T20:52:18.886407Z",
+     "iopub.status.idle": "2023-10-21T20:52:18.956009Z",
+     "shell.execute_reply": "2023-10-21T20:52:18.954195Z",
+     "shell.execute_reply.started": "2023-10-21T20:52:18.886922Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Now get the melted dataframe\n",
+    "idvars = ['bld_type', 'dam_cat']\n",
+    "naccs_melt = tidy_ddfs(naccs_res, idvars)\n",
+    "\n",
+    "# Drop columns we don't need\n",
+    "drop_cols = ['depth_str', 'pct_dam']\n",
+    "naccs_f = naccs_melt.drop(columns=drop_cols)\n",
+    "\n",
+    "# We want to pivot the dataframe so that Min/ML/Max are our columns\n",
+    "naccs_piv = naccs_f.pivot(index=['bld_type', 'depth_ft'],\n",
+    "                          columns='dam_cat')['rel_dam'].reset_index()\n",
+    "\n",
+    "# These our the parameters for the triangular distributions\n",
+    "# we will draw from\n",
+    "# Rename them as the parameter names - left, mode, right\n",
+    "naccs_out = naccs_piv.rename(columns={'Min': 'left',\n",
+    "                                      'ML': 'mode',\n",
+    "                                      'Max': 'right'})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c84161e-2cd2-4bbf-aeb2-96d68386c666",
+   "metadata": {},
+   "source": [
+    "### Save our processed ddfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "7ffbc854-d3f2-4e3d-ae8b-554426645f8d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-21T20:53:09.744020Z",
+     "iopub.status.busy": "2023-10-21T20:53:09.742993Z",
+     "iopub.status.idle": "2023-10-21T20:53:10.206181Z",
+     "shell.execute_reply": "2023-10-21T20:53:10.204976Z",
+     "shell.execute_reply.started": "2023-10-21T20:53:09.743969Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ddf_out_dir = join(VULN_DIR_I, 'physical')\n",
+    "prepare_saving(ddf_out_dir)\n",
+    "\n",
+    "# Save hazus_f as hazus_ddfs.csv\n",
+    "hazus_f.to_csv(join(VULN_DIR_I, 'hazus_ddfs.csv'),\n",
+    "               index=False)\n",
+    "\n",
+    "# Save naccs_out as naccs_ddfs.csv\n",
+    "naccs_out.to_csv(join(VULN_DIR_I, 'naccs_ddfs.csv'),\n",
+    "                 index=False)"
    ]
   },
   {
@@ -384,12 +755,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "881d0eee-bee3-45fe-97a8-f4f2eeda0bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a3455e12-484b-4413-938e-7b2cfe935231",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# glob for shp files in REF_DIR_UZ - we need to get these all at\n",
-    "# our county level "
+    "# glob for shp files in REF_DIR_UZ - we need to get these \n",
+    "# clipped"
    ]
   },
   {
