--- a/workflow/notebooks/unzip_data.ipynb
+++ b/workflow/notebooks/unzip_data.ipynb
@@ -6,11 +6,11 @@
    "id": "391442f0-8bb5-4019-b898-119fc960223c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T22:11:58.896794Z",
-     "iopub.status.busy": "2023-10-19T22:11:58.896247Z",
-     "iopub.status.idle": "2023-10-19T22:11:59.255857Z",
-     "shell.execute_reply": "2023-10-19T22:11:59.254049Z",
-     "shell.execute_reply.started": "2023-10-19T22:11:58.896741Z"
+     "iopub.execute_input": "2023-10-21T23:17:34.070459Z",
+     "iopub.status.busy": "2023-10-21T23:17:34.069447Z",
+     "iopub.status.idle": "2023-10-21T23:17:34.108470Z",
+     "shell.execute_reply": "2023-10-21T23:17:34.107389Z",
+     "shell.execute_reply.started": "2023-10-21T23:17:34.070419Z"
     }
    },
    "outputs": [],
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "889bb0dc-fcc8-4b4a-9d6c-55e4cfc1aac3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T22:12:21.042191Z",
-     "iopub.status.busy": "2023-10-19T22:12:21.041896Z",
-     "iopub.status.idle": "2023-10-19T22:12:22.299393Z",
-     "shell.execute_reply": "2023-10-19T22:12:22.297954Z",
-     "shell.execute_reply.started": "2023-10-19T22:12:21.042165Z"
+     "iopub.execute_input": "2023-10-21T23:17:34.369526Z",
+     "iopub.status.busy": "2023-10-21T23:17:34.368562Z",
+     "iopub.status.idle": "2023-10-21T23:17:35.849081Z",
+     "shell.execute_reply": "2023-10-21T23:17:35.848225Z",
+     "shell.execute_reply.started": "2023-10-21T23:17:34.369475Z"
     }
    },
    "outputs": [],
@@ -38,20 +38,21 @@
     "import zipfile_deflate64\n",
     "import os\n",
     "from pathlib import Path\n",
+    "from collections import Counter\n",
     "from util.unzip import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b7d5b995-f53f-400a-8ab0-2b4770de8ea6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T22:12:23.009299Z",
-     "iopub.status.busy": "2023-10-19T22:12:23.008856Z",
-     "iopub.status.idle": "2023-10-19T22:12:23.113695Z",
-     "shell.execute_reply": "2023-10-19T22:12:23.112196Z",
-     "shell.execute_reply.started": "2023-10-19T22:12:23.009267Z"
+     "iopub.execute_input": "2023-10-21T23:17:35.850523Z",
+     "iopub.status.busy": "2023-10-21T23:17:35.850230Z",
+     "iopub.status.idle": "2023-10-21T23:17:36.001616Z",
+     "shell.execute_reply": "2023-10-21T23:17:36.000800Z",
+     "shell.execute_reply.started": "2023-10-21T23:17:35.850501Z"
     }
    },
    "outputs": [],
@@ -71,11 +72,11 @@
    "id": "b65e9eab-6f4a-4454-908c-fbc96c271a46",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-19T22:12:27.898794Z",
-     "iopub.status.busy": "2023-10-19T22:12:27.898235Z",
-     "iopub.status.idle": "2023-10-19T22:14:36.717881Z",
-     "shell.execute_reply": "2023-10-19T22:14:36.715998Z",
-     "shell.execute_reply.started": "2023-10-19T22:12:27.898743Z"
+     "iopub.execute_input": "2023-10-21T23:17:50.792695Z",
+     "iopub.status.busy": "2023-10-21T23:17:50.791567Z",
+     "iopub.status.idle": "2023-10-21T23:24:09.010346Z",
+     "shell.execute_reply": "2023-10-21T23:24:09.008751Z",
+     "shell.execute_reply.started": "2023-10-21T23:17:50.792630Z"
     }
    },
    "outputs": [
@@ -83,10 +84,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unzipped: noaa\n",
+      "Unzipped: 10027236\n",
       "Unzipped: noaa\n",
       "Unzipped: nfhl\n",
-      "Unzipped: Combination_Rain_WL\n",
+      "Unzipped: Combination_Rain_WL_Mid\n",
+      "Unzipped: Combination_Rain_WL_Lower\n",
+      "Unzipped: Combination_Rain_WL_Upper\n",
       "Unzipped: block\n",
       "Unzipped: tract\n",
       "Unzipped: bg\n",
@@ -96,13 +99,37 @@
     }
    ],
    "source": [
+    "# We're going to loop through the files we need to unzip\n",
+    "# and extract them into the appropriate directories\n",
+    "# One thing that will help the directory structure stay organized\n",
+    "# is to keep track of what the destination parent directory is\n",
+    "# If the parent directory appears multiple times in unzip_dirs\n",
+    "# we should also use the name of the file (excluding extension)\n",
+    "# as a subdirectory\n",
+    "# We can use the Counter() class from collections for this...\n",
+    "count = Counter(unzip_dirs)\n",
+    "need_subdir = [k for k, v in count.items() if v > 1]\n",
+    "\n",
     "for i, filepath in enumerate(to_unzip):\n",
-    "    # Get path version of filepath\n",
+    "    # Get path version of filepath tjat\n",
+    "    # we are unzipping\n",
     "    path = Path(filepath)\n",
-    "    # The destination directory\n",
-    "    unzip_path = Path(unzip_dirs[i])\n",
+    "\n",
+    "    # If unzip_dirs[i] is in need_subdir\n",
+    "    # we are going to add a subdirectory\n",
+    "    # from str.split('/')[-1][:-4]\n",
+    "    # This gives us noaa from noaa.zip, for example\n",
+    "\n",
+    "    # So first, we get our out_filedir\n",
+    "    out_filedir = unzip_dirs[i]\n",
+    "    # Then we add subdir if we need it\n",
+    "    if unzip_dirs[i] in need_subdir:\n",
+    "        subdir = filepath.split('/')[-1][:-4]\n",
+    "        out_filedir = join(out_filedir, subdir)\n",
+    "        \n",
+    "    # Extract to out_filedir\n",
     "    with ZipFile(path, \"r\") as zip_ref:\n",
-    "        zip_ref.extractall(unzip_path)\n",
+    "        zip_ref.extractall(out_filedir)\n",
     "    \n",
     "    #TODO helpful log message\n",
     "    print('Unzipped: ' + str(path.name).split('.')[0])"
@@ -111,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399fa01f-26d8-4688-bbd4-92c9c468a00b",
+   "id": "9302e9c9-2574-4316-b72b-57c8fd0a4e4e",
    "metadata": {},
    "outputs": [],
    "source": []
