data processed and ready for ensembles

--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -6,11 +6,11 @@
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-21T19:18:34.376501Z",
-     "iopub.status.busy": "2023-10-21T19:18:34.375754Z",
-     "iopub.status.idle": "2023-10-21T19:18:34.418667Z",
-     "shell.execute_reply": "2023-10-21T19:18:34.417529Z",
-     "shell.execute_reply.started": "2023-10-21T19:18:34.376451Z"
+     "iopub.execute_input": "2023-10-22T20:46:31.932694Z",
+     "iopub.status.busy": "2023-10-22T20:46:31.931911Z",
+     "iopub.status.idle": "2023-10-22T20:46:31.970933Z",
+     "shell.execute_reply": "2023-10-22T20:46:31.969832Z",
+     "shell.execute_reply.started": "2023-10-22T20:46:31.932643Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-21T19:18:34.422743Z",
-     "iopub.status.busy": "2023-10-21T19:18:34.421798Z",
-     "iopub.status.idle": "2023-10-21T19:18:36.792080Z",
-     "shell.execute_reply": "2023-10-21T19:18:36.791133Z",
-     "shell.execute_reply.started": "2023-10-21T19:18:34.422667Z"
+     "iopub.execute_input": "2023-10-22T20:46:32.364749Z",
+     "iopub.status.busy": "2023-10-22T20:46:32.363792Z",
+     "iopub.status.idle": "2023-10-22T20:46:33.401022Z",
+     "shell.execute_reply": "2023-10-22T20:46:33.400171Z",
+     "shell.execute_reply.started": "2023-10-22T20:46:32.364701Z"
     }
    },
    "outputs": [],
@@ -57,11 +57,11 @@
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-10-21T19:18:36.793561Z",
-     "iopub.status.busy": "2023-10-21T19:18:36.793170Z",
-     "iopub.status.idle": "2023-10-21T19:18:36.812216Z",
-     "shell.execute_reply": "2023-10-21T19:18:36.811375Z",
-     "shell.execute_reply.started": "2023-10-21T19:18:36.793534Z"
+     "iopub.execute_input": "2023-10-22T20:46:33.402515Z",
+     "iopub.status.busy": "2023-10-22T20:46:33.402205Z",
+     "iopub.status.idle": "2023-10-22T20:46:33.417762Z",
+     "shell.execute_reply": "2023-10-22T20:46:33.417036Z",
+     "shell.execute_reply.started": "2023-10-22T20:46:33.402493Z"
     }
    },
    "outputs": [],
@@ -738,6 +738,146 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f29922b9-012b-4969-a04d-3738e7c5b567",
+   "metadata": {},
+   "source": [
+    "## Proccess NFHL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4a49725d-26dd-44d0-98bc-b89a45fc70ff",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:28:06.636062Z",
+     "iopub.status.busy": "2023-10-22T20:28:06.635303Z",
+     "iopub.status.idle": "2023-10-22T20:28:08.559754Z",
+     "shell.execute_reply": "2023-10-22T20:28:08.559031Z",
+     "shell.execute_reply.started": "2023-10-22T20:28:06.636019Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# We want S_FLD_HAZ_AR \n",
+    "fld_haz_fp = join(POL_DIR_UZ, FIPS, 'S_FLD_HAZ_AR.shp')\n",
+    "nfhl = gpd.read_file(fld_haz_fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f19ac8f5-eb5d-4755-9c70-5e9bf06e7e09",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:32:30.197520Z",
+     "iopub.status.busy": "2023-10-22T20:32:30.197255Z",
+     "iopub.status.idle": "2023-10-22T20:32:31.864864Z",
+     "shell.execute_reply": "2023-10-22T20:32:31.864144Z",
+     "shell.execute_reply.started": "2023-10-22T20:32:30.197498Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Keep FLD_ZONE, FLD_AR_ID, STATIC_BFE, geometry\n",
+    "keep_cols = ['FLD_ZONE', 'FLD_AR_ID', 'STATIC_BFE', 'ZONE_SUBTY',\n",
+    "             'geometry']\n",
+    "nfhl_f = nfhl.loc[:,keep_cols]\n",
+    "\n",
+    "# Adjust .2 pct X zones to X_500\n",
+    "nfhl_f.loc[nfhl_f['ZONE_SUBTY'] == '0.2 PCT ANNUAL CHANCE FLOOD HAZARD',\n",
+    "           'FLD_ZONE'] = nfhl_f['FLD_ZONE'] + '_500'\n",
+    "\n",
+    "# Update column names\n",
+    "# Lower case\n",
+    "nfhl_f.columns = [x.lower() for x in nfhl_f.columns]\n",
+    "\n",
+    "# Drop ZONE_SUBTY\n",
+    "nfhl_f = nfhl_f.drop(columns=['zone_subty'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4b141b40-0141-4e4e-874b-6813a2c780ad",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:51:09.615247Z",
+     "iopub.status.busy": "2023-10-22T20:51:09.614969Z",
+     "iopub.status.idle": "2023-10-22T20:51:10.171497Z",
+     "shell.execute_reply": "2023-10-22T20:51:10.170761Z",
+     "shell.execute_reply.started": "2023-10-22T20:51:09.615220Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Clip flood zones to our study area\n",
+    "clip_out_filep = join(FI, 'ref', FIPS, 'clip.gpkg')\n",
+    "clip_gdf = gpd.read_file(clip_out_filep)\n",
+    "\n",
+    "# Reproj flood zones\n",
+    "nfhl_reproj = nfhl_f.to_crs(clip_gdf.crs)\n",
+    "\n",
+    "# Clip\n",
+    "nfhl_clip = gpd.clip(nfhl_reproj, clip_gdf)\n",
+    "\n",
+    "# Reproject back\n",
+    "nfhl_clip_out = nfhl_clip.to_crs(nfhl_f.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eedff84c-ddb7-47b4-9551-6df4e7525478",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:51:11.666793Z",
+     "iopub.status.busy": "2023-10-22T20:51:11.666602Z",
+     "iopub.status.idle": "2023-10-22T20:51:13.234539Z",
+     "shell.execute_reply": "2023-10-22T20:51:13.233721Z",
+     "shell.execute_reply.started": "2023-10-22T20:51:11.666778Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Write file\n",
+    "nfhl_out_filep = join(POL_DIR_I, FIPS, 'fld_zones.gpkg')\n",
+    "prepare_saving(nfhl_out_filep)\n",
+    "nfhl_clip_out.to_file(nfhl_out_filep,\n",
+    "                      driver='GPKG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5095b468-9d10-4c7e-94f1-d74e80a4d746",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:31:31.909701Z",
+     "iopub.status.busy": "2023-10-22T20:31:31.909472Z",
+     "iopub.status.idle": "2023-10-22T20:31:32.304728Z",
+     "shell.execute_reply": "2023-10-22T20:31:32.303576Z",
+     "shell.execute_reply.started": "2023-10-22T20:31:31.909683Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# This is optional: delete the nfhl directory to reduce\n",
+    "# the file storage burden\n",
+    "if RM_NFHL:\n",
+    "    # Get directory name\n",
+    "    nfhl_dir = join(POL_DIR_UZ, FIPS)\n",
+    "    \n",
+    "    # Try to remove the tree; if it fails,\n",
+    "    # throw an error using try...except.\n",
+    "    try:\n",
+    "        shutil.rmtree(nfhl_dir)\n",
+    "    except OSError as e:\n",
+    "        print(\"Error: %s - %s.\" % (e.filename, e.strerror))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1f77a02a-d329-479f-8355-93f0a34ded2c",
    "metadata": {
     "execution": {
@@ -776,7 +916,7 @@
    "id": "5ebe02b8-4e96-4bbf-8048-bfb4b9fda231",
    "metadata": {},
    "source": [
-    "# Process Social Vulnerability Data"
+    "## Process Social Vulnerability Data"
    ]
   },
   {
@@ -796,7 +936,7 @@
    "id": "41e07e31-71f1-46f0-a6a6-6bf8f1c5fa3f",
    "metadata": {},
    "source": [
-    "# Link - everything to structures"
+    "# Link everything to NSI"
    ]
   },
   {
@@ -805,6 +945,72 @@
    "metadata": {},
    "source": [
     "## Link NSI with Flood Zones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "044aa2f8-8802-4cb0-be12-8b7baf88e750",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:51:30.935675Z",
+     "iopub.status.busy": "2023-10-22T20:51:30.935001Z",
+     "iopub.status.idle": "2023-10-22T20:51:31.563827Z",
+     "shell.execute_reply": "2023-10-22T20:51:31.563100Z",
+     "shell.execute_reply.started": "2023-10-22T20:51:30.935626Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Just for jupyter notebooks\n",
+    "# Scripts don't need to reload the data since it runs all at once\n",
+    "# Jupyter is more for development, and might only run\n",
+    "# some sections at a time\n",
+    "# Using same names as above for consistency\n",
+    "EXP_OUT_FILEP = join(EXP_DIR_I, FIPS, 'nsi_sf.gpkg')\n",
+    "nsi_clip_out = gpd.read_file(EXP_OUT_FILEP)\n",
+    "\n",
+    "nfhl_out_filep = join(POL_DIR_I, FIPS, 'fld_zones.gpkg')\n",
+    "nfhl_clip_out = gpd.read_file(nfhl_out_filep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ef159940-f944-474d-954d-8abf84ff2fd8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-10-22T20:52:07.532239Z",
+     "iopub.status.busy": "2023-10-22T20:52:07.531969Z",
+     "iopub.status.idle": "2023-10-22T20:52:08.459985Z",
+     "shell.execute_reply": "2023-10-22T20:52:08.458792Z",
+     "shell.execute_reply.started": "2023-10-22T20:52:07.532217Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Project nsi to flood zone crs\n",
+    "nsi_fz = nsi_clip_out.to_crs(nfhl_clip_out.crs)\n",
+    "\n",
+    "# Spatial join, retaining flood zone cols\n",
+    "# Only need the id and geom from nsi for this\n",
+    "fz_m = gpd.sjoin(nsi_fz[['fd_id', 'geometry']],\n",
+    "                 nfhl_clip_out,\n",
+    "                 predicate='within')\n",
+    "\n",
+    "# I checked for issues like overlapping flood zones\n",
+    "# resulting in NSI structures in multiple polygons\n",
+    "# and did not find any. That's good, but chances\n",
+    "# are there will be counties where this happens\n",
+    "# and we will need code to handle these consistently\n",
+    "\n",
+    "# Write out fd_id/fld_ar_id/fld_zone/static_bfe\n",
+    "keep_cols = ['fd_id', 'fld_zone', 'fld_ar_id', 'static_bfe']\n",
+    "fz_m_out = fz_m[keep_cols]\n",
+    "\n",
+    "nsi_fz_filep = join(EXP_DIR_I, FIPS, 'nsi_fz.pqt')\n",
+    "prepare_saving(nsi_fz_filep)\n",
+    "fz_m_out.to_parquet(nsi_fz_filep)"
    ]
   },
   {
