making progress on ensemble

--- a/workflow/notebooks/process_haz.ipynb
+++ b/workflow/notebooks/process_haz.ipynb
@@ -392,7 +392,10 @@
     "# Write out dataframe that links fd_id to depths\n",
     "# with columns corresponding to RETPER_PCTILE (i.e. 500_Mid)\n",
     "nsi_depths_out = join(EXP_DIR_I, FIPS, 'nsi_depths.pqt')\n",
-    "depth_df_f.reset_index().to_parquet(nsi_depths_out)"
+    "# Round to nearest foot\n",
+    "# Depth-damage functions don't have nearly the precision\n",
+    "# to make use of inches differences\n",
+    "depth_df_f.reset_index().to_parquet(nsi_depths_out.round())"
    ]
   }
  ],
