--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "07ae3738-6ce1-4625-9777-cb42c218896b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T21:59:50.776036Z",
-     "iopub.status.busy": "2023-11-06T21:59:50.775491Z",
-     "iopub.status.idle": "2023-11-06T21:59:51.552743Z",
-     "shell.execute_reply": "2023-11-06T21:59:51.551165Z",
-     "shell.execute_reply.started": "2023-11-06T21:59:50.775991Z"
+     "iopub.execute_input": "2023-11-07T20:26:41.904410Z",
+     "iopub.status.busy": "2023-11-07T20:26:41.903775Z",
+     "iopub.status.idle": "2023-11-07T20:26:42.466352Z",
+     "shell.execute_reply": "2023-11-07T20:26:42.464539Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:41.904330Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "8cf7aaad-086f-40a9-92e4-374d1efb7495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T21:59:51.555626Z",
-     "iopub.status.busy": "2023-11-06T21:59:51.555161Z",
-     "iopub.status.idle": "2023-11-06T21:59:51.590138Z",
-     "shell.execute_reply": "2023-11-06T21:59:51.588633Z",
-     "shell.execute_reply.started": "2023-11-06T21:59:51.555582Z"
+     "iopub.execute_input": "2023-11-07T20:26:42.468914Z",
+     "iopub.status.busy": "2023-11-07T20:26:42.468423Z",
+     "iopub.status.idle": "2023-11-07T20:26:44.865583Z",
+     "shell.execute_reply": "2023-11-07T20:26:44.864259Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:42.468867Z"
     }
    },
    "outputs": [],
@@ -63,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1ae98b55-a0e0-4e75-b3f3-b9dcc294234c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T21:59:51.593316Z",
-     "iopub.status.busy": "2023-11-06T21:59:51.592358Z",
-     "iopub.status.idle": "2023-11-06T21:59:51.622439Z",
-     "shell.execute_reply": "2023-11-06T21:59:51.620962Z",
-     "shell.execute_reply.started": "2023-11-06T21:59:51.593271Z"
+     "iopub.execute_input": "2023-11-07T20:26:44.867563Z",
+     "iopub.status.busy": "2023-11-07T20:26:44.867184Z",
+     "iopub.status.idle": "2023-11-07T20:26:44.888497Z",
+     "shell.execute_reply": "2023-11-07T20:26:44.887326Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:44.867535Z"
     }
    },
    "outputs": [],
@@ -388,15 +379,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2558d82-b45e-4249-8bd8-c416d0d5ca37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:48.966645Z",
-     "iopub.status.busy": "2023-11-06T19:48:48.965535Z",
-     "iopub.status.idle": "2023-11-06T19:48:49.119088Z",
-     "shell.execute_reply": "2023-11-06T19:48:49.117324Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:48.966578Z"
+     "iopub.execute_input": "2023-11-07T20:26:48.630636Z",
+     "iopub.status.busy": "2023-11-07T20:26:48.630287Z",
+     "iopub.status.idle": "2023-11-07T20:26:48.818040Z",
+     "shell.execute_reply": "2023-11-07T20:26:48.816762Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:48.630604Z"
     }
    },
    "outputs": [],
@@ -417,15 +408,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "01a06109-cc56-4abf-8973-dfd3ebd531fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:49.655073Z",
-     "iopub.status.busy": "2023-11-06T19:48:49.654801Z",
-     "iopub.status.idle": "2023-11-06T19:48:49.682000Z",
-     "shell.execute_reply": "2023-11-06T19:48:49.681394Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:49.655050Z"
+     "iopub.execute_input": "2023-11-07T20:26:49.224748Z",
+     "iopub.status.busy": "2023-11-07T20:26:49.224221Z",
+     "iopub.status.idle": "2023-11-07T20:26:49.273910Z",
+     "shell.execute_reply": "2023-11-07T20:26:49.272057Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:49.224699Z"
     }
    },
    "outputs": [],
@@ -490,15 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5f934250-6c91-47fd-9497-13702fd8f776",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:50.232188Z",
-     "iopub.status.busy": "2023-11-06T19:48:50.231719Z",
-     "iopub.status.idle": "2023-11-06T19:48:50.301217Z",
-     "shell.execute_reply": "2023-11-06T19:48:50.299550Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:50.232147Z"
+     "iopub.execute_input": "2023-11-07T20:26:50.347163Z",
+     "iopub.status.busy": "2023-11-07T20:26:50.346595Z",
+     "iopub.status.idle": "2023-11-07T20:26:50.418095Z",
+     "shell.execute_reply": "2023-11-07T20:26:50.416475Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:50.347113Z"
     }
    },
    "outputs": [],
@@ -545,15 +536,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "78001c46-8d0f-4836-86c1-3d1d74e22da3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:50.818580Z",
-     "iopub.status.busy": "2023-11-06T19:48:50.818025Z",
-     "iopub.status.idle": "2023-11-06T19:48:50.876389Z",
-     "shell.execute_reply": "2023-11-06T19:48:50.874875Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:50.818527Z"
+     "iopub.execute_input": "2023-11-07T20:26:52.385693Z",
+     "iopub.status.busy": "2023-11-07T20:26:52.385169Z",
+     "iopub.status.idle": "2023-11-07T20:26:52.455026Z",
+     "shell.execute_reply": "2023-11-07T20:26:52.452854Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:52.385643Z"
     }
    },
    "outputs": [],
@@ -602,8 +593,8 @@
     "# Get param cols\n",
     "uni_params = ['low', 'high']\n",
     "\n",
-    "# Get df of ddf_id, depth_ft\n",
-    "hazus_f = hazus[['ddf_id', 'depth_ft']]\n",
+    "# Get df of ddf_id, depth_ft, rel_dam\n",
+    "hazus_f = hazus[['ddf_id', 'depth_ft', 'rel_dam']]\n",
     "# Now store params as a list\n",
     "hazus_f = hazus_f.assign(params=hazus[uni_params].values.tolist())\n",
     "\n",
@@ -649,15 +640,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "33aca7c2-b81d-48b0-ba0a-a2ba3391c913",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:53.619241Z",
-     "iopub.status.busy": "2023-11-06T19:48:53.618726Z",
-     "iopub.status.idle": "2023-11-06T19:48:53.650266Z",
-     "shell.execute_reply": "2023-11-06T19:48:53.648475Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:53.619195Z"
+     "iopub.execute_input": "2023-11-07T20:26:59.493945Z",
+     "iopub.status.busy": "2023-11-07T20:26:59.493385Z",
+     "iopub.status.idle": "2023-11-07T20:26:59.537604Z",
+     "shell.execute_reply": "2023-11-07T20:26:59.535763Z",
+     "shell.execute_reply.started": "2023-11-07T20:26:59.493893Z"
     }
    },
    "outputs": [],
@@ -671,15 +662,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f838a2d4-2491-449b-92dc-fc345ceea1d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:53.861959Z",
-     "iopub.status.busy": "2023-11-06T19:48:53.860766Z",
-     "iopub.status.idle": "2023-11-06T19:48:53.905819Z",
-     "shell.execute_reply": "2023-11-06T19:48:53.904326Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:53.861909Z"
+     "iopub.execute_input": "2023-11-07T20:27:00.851410Z",
+     "iopub.status.busy": "2023-11-07T20:27:00.850856Z",
+     "iopub.status.idle": "2023-11-07T20:27:00.903842Z",
+     "shell.execute_reply": "2023-11-07T20:27:00.902023Z",
+     "shell.execute_reply.started": "2023-11-07T20:27:00.851361Z"
     }
    },
    "outputs": [],
@@ -707,15 +698,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "50cd8f69-6b40-47a5-a9e0-ce956e07f956",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:55.941279Z",
-     "iopub.status.busy": "2023-11-06T19:48:55.940774Z",
-     "iopub.status.idle": "2023-11-06T19:48:56.027430Z",
-     "shell.execute_reply": "2023-11-06T19:48:56.025966Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:55.941233Z"
+     "iopub.execute_input": "2023-11-07T20:27:03.593954Z",
+     "iopub.status.busy": "2023-11-07T20:27:03.593436Z",
+     "iopub.status.idle": "2023-11-07T20:27:03.721404Z",
+     "shell.execute_reply": "2023-11-07T20:27:03.719845Z",
+     "shell.execute_reply.started": "2023-11-07T20:27:03.593906Z"
     }
    },
    "outputs": [],
@@ -754,23 +745,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7ffbc854-d3f2-4e3d-ae8b-554426645f8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-06T19:48:58.436253Z",
-     "iopub.status.busy": "2023-11-06T19:48:58.435747Z",
-     "iopub.status.idle": "2023-11-06T19:48:58.824053Z",
-     "shell.execute_reply": "2023-11-06T19:48:58.822569Z",
-     "shell.execute_reply.started": "2023-11-06T19:48:58.436208Z"
+     "iopub.execute_input": "2023-11-07T20:29:17.030568Z",
+     "iopub.status.busy": "2023-11-07T20:29:17.030279Z",
+     "iopub.status.idle": "2023-11-07T20:29:17.335327Z",
+     "shell.execute_reply": "2023-11-07T20:29:17.334093Z",
+     "shell.execute_reply.started": "2023-11-07T20:29:17.030546Z"
     }
    },
    "outputs": [],
    "source": [
+    "# We need one hazus file with params for \n",
+    "# uncertainty and one w/ just rel_dam\n",
+    "hazus_unc = hazus_f[['ddf_id', 'depth_ft', 'params']]\n",
+    "hazus_nounc = hazus_f[['ddf_id', 'depth_ft', 'rel_dam']]\n",
+    "\n",
     "# Main directory\n",
     "ddf_out_dir = join(VULN_DIR_I, 'physical')\n",
     "# Main ddf files\n",
     "hazus_out_filep = join(ddf_out_dir, 'hazus_ddfs.pqt')\n",
+    "hazus_nounc_out_filep = join(ddf_out_dir, 'hazus_ddfs_nounc.pqt')\n",
     "naccs_out_filep = join(ddf_out_dir, 'naccs_ddfs.pqt')\n",
     "# Dictionaries - save as .json for simplicity\n",
     "naccs_max_filep = join(ddf_out_dir, 'naccs.json')\n",
@@ -784,7 +781,8 @@
     "# Save as parquet files since\n",
     "# these will directly read in the\n",
     "# DDF params as a list, not as a string\n",
-    "hazus_f.to_parquet(hazus_out_filep)\n",
+    "hazus_unc.to_parquet(hazus_out_filep)\n",
+    "hazus_nounc.to_parquet(hazus_nounc_out_filep)\n",
     "naccs_out.to_parquet(naccs_out_filep)\n",
     "\n",
     "# Save the json files\n",
